[gd_scene load_steps=8 format=3 uid="uid://b3gfbs0qtaiwr"]

[ext_resource type="Script" path="res://scenes/Projectiles/laser.gd" id="1_gfllt"]
[ext_resource type="Texture2D" uid="uid://cruyyne1vq6we" path="res://graphics/projectiles/blue.png" id="2_l2k38"]
[ext_resource type="Texture2D" uid="uid://d2ufn41lw2ug1" path="res://graphics/decals/white.png" id="3_ceuk3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y68mh"]
radius = 8.00001
height = 65.9999

[sub_resource type="Gradient" id="Gradient_5naft"]
colors = PackedColorArray(0.976471, 0.976471, 0.976471, 1, 1, 1, 1, 0.00784314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yo555"]
gradient = SubResource("Gradient_5naft")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oyj15"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.0
emission_ring_inner_radius = 0.0
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
color = Color(0.223529, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_yo555")

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_gfllt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(104, -1.49961)
rotation = 1.5708
texture = ExtResource("2_l2k38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(153, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_y68mh")

[node name="BlastParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_oyj15")
texture = ExtResource("3_ceuk3")
lifetime = 0.25
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(108, 0)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
color = Color(0.172549, 1, 1, 1)
energy = 50.0
blend_mode = 2
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("2_l2k38")

[node name="LaserLifeTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserLifeTimer" to="." method="_on_laser_life_timer_timeout"]
